task/5 Fix flickering shopping cart. Added contact page form

--- a/css/style.css
+++ b/css/style.css
@@ -16659,3 +16659,8 @@ label.checkbox { padding-left: 20px; }
 }
 
 
+.js-cart-dropdown__content {
+  display: none;
+  opacity: 0;
+  transform: translateY(-10px);
+}
